--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
       <version>2.14.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>bootstrap</artifactId>
+      <version>5.3.0</version>
+    </dependency>
+
+
 
   </dependencies>
 
